Result of OpenRewrite rewriteRun